; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_serial_general.c_console_printbuf_state_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_serial_general.c_console_printbuf_state_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.console_printbuf_state = type { i32 }

@CONS_PB_WRITE_NEWLINE = common dso_local global i32 0, align 4
@CONS_PB_CANBLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @console_printbuf_state_init(%struct.console_printbuf_state* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.console_printbuf_state*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.console_printbuf_state* %0, %struct.console_printbuf_state** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.console_printbuf_state*, %struct.console_printbuf_state** %4, align 8
  %8 = icmp eq %struct.console_printbuf_state* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %3
  br label %30

10:                                               ; preds = %3
  %11 = load %struct.console_printbuf_state*, %struct.console_printbuf_state** %4, align 8
  %12 = call i32 @bzero(%struct.console_printbuf_state* %11, i32 4)
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %10
  %16 = load i32, i32* @CONS_PB_WRITE_NEWLINE, align 4
  %17 = load %struct.console_printbuf_state*, %struct.console_printbuf_state** %4, align 8
  %18 = getelementptr inbounds %struct.console_printbuf_state, %struct.console_printbuf_state* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = or i32 %19, %16
  store i32 %20, i32* %18, align 4
  br label %21

21:                                               ; preds = %15, %10
  %22 = load i32, i32* %6, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %30

24:                                               ; preds = %21
  %25 = load i32, i32* @CONS_PB_CANBLOCK, align 4
  %26 = load %struct.console_printbuf_state*, %struct.console_printbuf_state** %4, align 8
  %27 = getelementptr inbounds %struct.console_printbuf_state, %struct.console_printbuf_state* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = or i32 %28, %25
  store i32 %29, i32* %27, align 4
  br label %30

30:                                               ; preds = %9, %24, %21
  ret void
}

declare dso_local i32 @bzero(%struct.console_printbuf_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
